# opp-uruguay-budget-pipeline

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: dim_categories.sql  dim_incisos.sql  fct_budget_execution.sql  schema.yml
dbt/models/staging/: schema.yml  stg_budget_credits.sql  stg_pdf_extractions.sql
notebooks/: 01_ingestion_eda.ipynb  03_bqml_analysis.ipynb
orchestration/: opp_pipeline.yml
pipelines/: ingest_ckan.py  ingest_pdfs.py  ingest_transparency.py
scripts/: check_bq_columns.py  create_bq_sources.py  inspect_bq_schemas.py  inspect_gcs_schemas.py
terraform/: main.tf  outputs.tf  variables.tf
